syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

option csharp_namespace = "AddressBookLookup.Grpc.Common";

service AddressBookLookupService {
  rpc GetAddressBook (google.protobuf.Empty) returns (AddressBook);
  rpc FindPerson (FindPersonRequest) returns (stream Person);
}

message Person {
  string name = 1;
  string address = 2;
  string email = 3;
}

message AddressBook {
  repeated Person people = 1;
}

message FindPersonRequest {
  Person person = 1;
  google.protobuf.FieldMask field_mask = 2;
}